[package]
name = "bumper_robot"
version = "0.1.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = ['winuser'] }
scrap = "0.4"
cgmath = "0.18"
image = "0.23"
winit = "0.25"
wgpu = "0.9"
futures = "0.3"
bytemuck = { version = "1.5", features = [ "derive" ] }
once_cell = "1.8"
timer = "0.2"
chrono = "0.4"
itertools = "0.10"
